--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "graphql": "^16.8.1",
-    "graphql-http": "^1.22.0"
+    "@apollo/server": "^4.10.0",
+    "graphql": "^16.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
